--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://polyfill.io" />
     <link rel="dns-prefetch" href="https://polyfill.io" />
     <link rel="preconnect" href="https://cdn.contentful.com" />
@@ -10,6 +12,7 @@
     <link rel="preconnect" href="https://images.ctfassets.net" />
     <link rel="dns-prefetch" href="https://images.ctfassets.net" />
     <title><%= title %></title>
+    <link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div id="app"></div>
