--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+/* eslint-disable prettier */
 $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
@@ -7,3 +8,7 @@ $primary: #79158f;
 // https://fonts.google.com/specimen/Lato
 
 @import '~bootstrap/scss/bootstrap';
+
+.logo {
+  zoom: 60%;
+}
