--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,8 @@ $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
 
 $primary: #79158f;
+// TODO: set standard radius
+$btn-border-radius: 0;
 
 // https://fonts.google.com/specimen/Lato
 
