--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,10 @@ $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
 
+$headings-font-family: AvenirLTPro-Heavy, $font-family-sans-serif;
+
+$font-weight: 300;
+
 $primary: #79158f;
 // TODO: set standard radius
 $btn-border-radius: 0;
