--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
 /* eslint-disable prettier */
-$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-  Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
+$font-family-sans-serif: AvenirLTStd-Book, Lato, -apple-system,
+  BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji' !default;
 
 $headings-font-family: AvenirLTPro-Heavy, $font-family-sans-serif;
 
